--- a/index.html
+++ b/index.html
@@ -72,15 +72,25 @@ Design and implement a User Registration Form using HTML that collects personal 
             <br />
             <br />
 
-            <input type="reset" value="Reset" />
+            <!-- <input type="reset" value="Reset" /> -->
           </fieldset>
           <br /><br />
           <fieldset>
             <legend>Feedback</legend>
             <label>Rate the session:</label>
-            <br />
+            <!-- <br /> -->
 
-            <input type="range" name="" id="" />
+            <input
+              type="range"
+              name=""
+              id=""
+              oninput="output.value = this.value"
+              min="0"
+              max="10"
+              step="1"
+              value="0"
+            />
+            <output id="output">0</output>
             <br />
             <br />
             <label for> Rate the teaching: </label>
@@ -115,6 +125,11 @@ Design and implement a User Registration Form using HTML that collects personal 
               >Accept the terms and conditions</label
             >
           </fieldset>
+          <input
+            style="margin-top: 15px; width: 100%; height: 30px"
+            type="reset"
+            value="Reset"
+          />
           <button
             type="submit"
             style="margin-top: 15px; width: 100%; height: 30px"
