--- a/task-2.html
+++ b/task-2.html
@@ -168,8 +168,8 @@
             <br>
          
          <div style="width: 90%;height: 100px;display: flex;justify-content: center;align-items: center;flex-direction: column;padding: 10px;">
-            <input type="submit" value="submit" style="width: 100%;height: 30px;"> 
-         <br><input type="reset" value="Reset" style="width: 100%;height: 30px;">
+             <input type="reset" value="Reset" style="width: 100%;height: 30px;"> <br>
+             <input type="submit" value="submit" style="width: 100%;height: 30px;"> 
          </div>
         </fieldset>
     </fieldset>
