--- a/task-2.html
+++ b/task-2.html
@@ -108,7 +108,7 @@
           <br>
           Enter roll number:
           <label for="mob1"><u></u></label>
-          <input type="id"  placeholder="enter the mobile"name="mobile1" id="mob1">
+          <input type="id"  placeholder="enter the roll"name="mobile1" id="mob1">
           <br><br>
           Attach college id pic:<br>
           <input type="file"  name="file" id="file">
@@ -135,7 +135,7 @@
           <br>
           Enter roll number:
           <label for="mob1"><u></u></label>
-          <input type="id"  placeholder="enter the mobile"name="mobile1" id="mob1">
+          <input type="id"  placeholder="enter the roll"name="mobile1" id="mob1">
           <br><br>
           Attach college id pic:<br>
           <input type="file"  name="file" id="file">
