tailwind langing page

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -7,10 +7,73 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
+    <nav class="navbar">
+      <div class="inner1">
+        <h2>Mountain Travel</h2>
+      </div>
+      <div class="inner2">
+        <a href="#">Home</a><a href="#popular">Popular Destinations</a
+        ><a href="">Testimonials</a>
+      </div>
+    </nav>
+    <header class="header" id="home">
       <h2 id="id">Explore the mountains</h2>
       <p id="id">Plan your Adventure with our curated mountain destinations</p>
-      <button>Know more....</button>
+      <button class="btn1">Know more....</button>
     </header>
+    <section class="sec">
+      <u><h1>Popular Destinations</h1></u>
+    </section>
+    <section class="section" id="popular">
+      <div class="images">
+        <div class="img">
+          <img src="assets/pexels-vikashkr50-28908851.jpg" class="real1" />
+        </div>
+        <div class="name">
+          <h2 style="margin-top: 0px">Manali</h2>
+          <p style="margin-top: 0px; font-size: 15px">
+            Let's Make a trip for Manali
+          </p>
+          <button class="book">Book Now</button>
+        </div>
+      </div>
+      <div class="images">
+        <div class="img">
+          <img
+            src="assets//pexels-celeste-2305-459199888-15638943.jpg"
+            class="real2"
+          />
+        </div>
+        <div class="name">
+          <h2 style="margin-top: 0px">Manali</h2>
+          <p style="margin-top: 0px; font-size: 15px">
+            Let's Make a trip for Manali
+          </p>
+          <button class="book">Book Now</button>
+        </div>
+      </div>
+      <div class="images">
+        <div class="img">
+          <img src="assets/pexels-pixabay-210243.jpg" class="real3" />
+        </div>
+        <div class="name">
+          <h2 style="margin-top: 0px">Manali</h2>
+          <p style="margin-top: 0px; font-size: 15px">
+            Let's Make a trip for Manali
+          </p>
+          <button class="book">Book Now</button>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div style="margin-left: 60px">
+        © 2024 Likhith Panigrahi ALL RIGHTS RESERVED
+      </div>
+      <div class="logos">
+        <l><h4>Quick Links</h4></l>
+        <a href="#home">Home</a><a href="#popular">Popular Destinations</a
+        ><a href="">Testimonials</a>
+      </div>
+    </footer>
   </body>
 </html>
