--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -65,6 +65,64 @@
         </div>
       </div>
     </section>
+    <section class="testimonials">
+      <div class="heading">
+        <h1><u>What our Traveller says</u></h1>
+        <p>Let's here from there experiences</p>
+      </div>
+      <div class="photos">
+        <div class="clients">
+          <div
+            style="
+              width: 100%;
+              height: 70%;
+              background-color: red;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            "
+          >
+            <img
+              src="assets/images.jpeg"
+              style="width: 70%; border-radius: 10px"
+            />
+          </div>
+          <div
+            style="
+              width: 100%;
+              height: 30%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            "
+          ></div>
+        </div>
+        <div class="clients">
+          <div style="width: 100%; height: 70%; background-color: red"></div>
+          <div
+            style="
+              width: 100%;
+              height: 30%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            "
+          ></div>
+        </div>
+        <div class="clients">
+          <div style="width: 100%; height: 70%; background-color: red"></div>
+          <div
+            style="
+              width: 100%;
+              height: 30%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            "
+          ></div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <div style="margin-left: 60px">
         © 2024 Likhith Panigrahi ALL RIGHTS RESERVED
