--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -54,7 +54,11 @@
           </p>
           <div class="btn-search">
             <button>Get started</button>
-            <input type="text" class="seacrh" placeholder="Quick search...." />
+            <input
+              type="text"
+              class="seacrh"
+              placeholder="Quick search....           Ctr+v"
+            />
           </div>
         </div>
       </div>
