--- a/task-10/index.html
+++ b/task-10/index.html
@@ -278,5 +278,6 @@
         <div class="form-head"><h1>Slot Booking Form</h1></div>
       </div>
     </section>
+    <footer class="footer"></footer>
   </body>
 </html>
