--- a/task-24/index.html
+++ b/task-24/index.html
@@ -4,8 +4,258 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      .main-div {
+        display: flex;
+        justify-content: start;
+        align-items: start;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 40px;
+        padding: 30px 50px;
+      }
+      .card {
+        width: 250px;
+        height: 300px;
+        background-color: rgba(0, 0, 0, 0.073);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.141),
+          5px 5px 10px rgba(0, 0, 0, 0.141);
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+        transition: 0.3s;
+        cursor: pointer;
+      }
+      .card:hover {
+        transform: translateY(-20px);
+      }
+      .card1 {
+        width: 250px;
+        height: 300px;
+        background-color: rgba(0, 0, 0, 0.073);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+        border-radius: 5px;
+        /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.141),
+          5px 5px 10px rgba(0, 0, 0, 0.141); */
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+        transition: 0.3s;
+        cursor: pointer;
+      }
+      span {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: #01b2eb;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 900;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+      }
+      .slider {
+        width: 100%;
+        height: 50vh;
+        /* background-color: red; */
+        padding: 50px 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .slider-box {
+        width: 250px;
+        height: 300px;
+        /* background-color: #01b2eb; */
+        /* padding: 20px; */
+      }
+      button {
+        padding: 12px 20px;
+        font-size: 30px;
+        border-radius: 50%;
+        border: none;
+        margin: 20px;
+        background-color: rgba(0, 0, 0, 0.104);
+        cursor: pointer;
+        transition: 0.3s;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.141),
+          5px 5px 10px rgba(0, 0, 0, 0.141);
+      }
+      .hover {
+        background-color: rgba(0, 0, 0, 0.192);
+      }
+    </style>
   </head>
   <body>
-    <script></script>
+    <div style="width: 100%; height: 100vh" class="main-div"></div>
+    <div class="slider">
+      <button onclick="left()"><</button>
+      <div class="slider-box"></div>
+      <button onclick="right()">></button>
+    </div>
+    <script>
+      let fulldata;
+      async function fetchApi() {
+        try {
+          const response = await fetch(
+            "https://jsonplaceholder.typicode.com/users"
+          );
+          const data = await response.json();
+          // const { username, company, phone, name, website } = data;
+          console.log(data);
+          fulldata = data;
+          // console.log(website);
+          const main = document.querySelector(".main-div");
+          data.forEach((element, index) => {
+            const { username, company, phone, name, website } = element;
+            let editName = name.split(" ");
+            console.log(editName);
+            main.innerHTML += `
+            <div class="card">
+        <span onclick="openColorPicker(this)">${
+          editName[0].split("")[0] + editName[1].split("")[0]
+        }<input type="color" style="display: none" onchange="changeColor(this)" /></span>
+        <h3>${username.toUpperCase()}</h3>
+        <h3>${phone.split(" ")[0]}</h3>
+        <h3>${company.name}</h3>
+        <h3>${website}</h3>
+      </div>
+            `;
+            if (index == 0) {
+              let slide = (document.querySelector(".slider-box").innerHTML = `
+            <div class="card1">
+        <span onclick="colorchange()" ><input type="color" visibility="hidden"  />${
+          editName[0].split("")[0] + editName[1].split("")[0]
+        }</span>
+        <h3>${username.toUpperCase()}</h3>
+        <h3>${phone.split(" ")[0]}</h3>
+        <h3>${company.name}</h3>
+        <h3>${website}</h3>
+      </div>
+            `);
+            }
+          });
+        } catch (error) {
+          alert(error);
+        }
+      }
+      fetchApi();
+      let mainindex = 0;
+      setInterval(() => {
+        // console.log("Hi");
+        if (mainindex == fulldata.length) {
+          mainindex = 0;
+        }
+        mainindex++;
+        fulldata.forEach((element, index) => {
+          const { username, company, phone, name, website } = element;
+          let editName = name.split(" ");
+          // console.log(editName);
+          if (index == mainindex) {
+            let slide = (document.querySelector(".slider-box").innerHTML = `
+            <div class="card1">
+        <span>${editName[0].split("")[0] + editName[1].split("")[0]}</span>
+        <h3>${username.toUpperCase()}</h3>
+        <h3>${phone.split(" ")[0]}</h3>
+        <h3>${company.name}</h3>
+        <h3>${website}</h3>
+      </div>
+            `);
+          }
+        });
+      }, 900);
+
+      async function right() {
+        document.getElementsByTagName("button")[1].classList.add("hover");
+        setTimeout(() => {
+          document.getElementsByTagName("button")[1].classList.remove("hover");
+        }, 200);
+
+        if (mainindex == fulldata.length - 1) {
+          return;
+        }
+        // console.log("Hi");
+        mainindex++;
+        try {
+          fulldata.forEach((element, index) => {
+            const { username, company, phone, name, website } = element;
+            let editName = name.split(" ");
+            // console.log(editName);
+            if (index == mainindex) {
+              let slide = (document.querySelector(".slider-box").innerHTML = `
+            <div class="card1">
+        <span>${editName[0].split("")[0] + editName[1].split("")[0]}</span>
+        <h3>${username.toUpperCase()}</h3>
+        <h3>${phone.split(" ")[0]}</h3>
+        <h3>${company.name}</h3>
+        <h3>${website}</h3>
+
+      </div>
+            `);
+            }
+          });
+        } catch (error) {
+          alert(error);
+        }
+      }
+
+      async function left() {
+        document.getElementsByTagName("button")[0].classList.add("hover");
+        setTimeout(() => {
+          document.getElementsByTagName("button")[0].classList.remove("hover");
+        }, 200);
+
+        if (mainindex == 0) {
+          return;
+        }
+        mainindex--;
+        try {
+          fulldata.forEach((element, index) => {
+            const { username, company, phone, name, website } = element;
+            let editName = name.split(" ");
+            if (index == mainindex) {
+              let slide = (document.querySelector(".slider-box").innerHTML = `
+            <div class="card1">
+        <span>${editName[0].split("")[0] + editName[1].split("")[0]}</span>
+        <h3>${username.toUpperCase()}</h3>
+        <h3>${phone.split(" ")[0]}</h3>
+        <h3>${company.name}</h3>
+        <h3>${website}</h3>
+      </div>
+            `);
+            }
+          });
+        } catch (error) {
+          alert(error);
+        }
+      }
+
+      function openColorPicker(spanElement) {
+        console.log(spanElement);
+        let colorInput = spanElement.querySelector("input[type='color']");
+        colorInput.click();
+      }
+
+      function changeColor(inputElement) {
+        let spanElement = inputElement.parentElement;
+        spanElement.style.backgroundColor = inputElement.value;
+      }
+    </script>
   </body>
 </html>
